[package]
name = "rum-player"
description = "TUI-based music player"
version = "0.1.6"
authors = ["Kitsu <mail@kitsu.me>"]
edition = "2018"

license = "WTFPL"
readme = "README.md"
repository = "https://github.com/l4l/rum"
keywords = ["audio", "tui", "music", "player"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
tokio = {version = "0.2", features = ["stream", "rt-threaded", "macros", "io-std"] }
futures = "0.3"
reqwest = { version = "0.10", features = ["json"] }
async-stream = "0.2"

unhtml = { version = "0.7.5", features = ["derive"] }
serde = { version = "1.0.101", features = ["derive"] }
serde-xml-rs = "0.3.1"
toml = "0.5.5"

mpv = "0.2.3"

tui = "0.8.0"
termion = "1.5.5"

log = "0.4.8"
flexi_logger = "0.14.4"
snafu = "0.6.2"
strum = "0.16.0"
strum_macros = "0.16.0"
itertools = "0.8.1"
dirs = "2.0.2"
derive_more = "0.99.3"

[dev-dependencies]
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"

[badges]
travis-ci = { repository = "l4l/rum" }
